@@ -20,6 +20,12 @@ $VERSION = 1.234;
 1;
 ';
 
+my $in_a_string_escaped = '
+package DZT::WStrEscaped;
+print "\$VERSION = 1.234;"
+1;
+';
+
 my $two_packages = '
 package DZT::TP1;
 
@@ -75,6 +81,7 @@ my $tzil = Builder->from_config(
       'source/lib/DZT/TP1.pm'    => $two_packages,
       'source/lib/DZT/WVer.pm'   => $with_version,
       'source/lib/DZT/WVerTwoLines.pm' => $with_version_two_lines,
+      'source/lib/DZT/WStrEscaped.pm'  => $in_a_string_escaped,
       'source/lib/DZT/R1.pm'     => $repeated_packages,
       'source/lib/DZT/Monkey.pm' => $monkey_patched,
       'source/lib/DZT/HideMe.pm' => $hide_me_comment,
@@ -120,6 +127,13 @@ unlike(
   $dzt_wver_two_lines,
   qr{^\s*\$\QDZT::WVerTwoLines::VERSION = '0.001';\E\s*$}m,
   "*not* added to DZT::WVerTwoLines; we have one already",
+);
+
+my $dzt_wver_str_escaped = $tzil->slurp_file('build/lib/DZT/WStrEscaped.pm');
+like(
+  $dzt_wver_str_escaped,
+  qr{^\s*\$\QDZT::WStrEscaped::VERSION = '0.001';\E\s*$}m,
+  "added to DZT::WStrEscaped; the one we have is escaped",
 );
 
 my $dzt_script_pkg = $tzil->slurp_file('build/bin/script_pkg.pl');
